Fix margin for when tags overflow first row

--- a/assets/css/blog/post.css
+++ b/assets/css/blog/post.css
@@ -90,10 +90,7 @@
 
 .post-tags .tag {
     font-weight: 700;
-}
-
-.post-tags .tag + .tag {
-    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .post-tags .tag::before {
